--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ email: tingyichen.ntu@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "tingyi.chen" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://tingyi.chen" # the base hostname & protocol for your site, e.g. http://example.com
 github_username:  tingyi-chen
 
 # Build settings
